--- a/BloodPressureApp/BloodPressureApp.csproj
+++ b/BloodPressureApp/BloodPressureApp.csproj
@@ -63,6 +63,7 @@
     <Compile Include="BloodPressureMeasurement.cs" />
     <Compile Include="BloodPressureList.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="MakeToast.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLite.cs" />
